wrote the css for character website and changes some html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<title>Cinderella</title>
 	<link rel="icon" href="img/Cinderella-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -18,7 +20,7 @@
 		<h2>About Cinderella</h2>
 		<p>Cinderella is amazing! She is an extrodonary girl who is taken advantage of on a daily basis by her stepmother and stepsisters. It only takes one person to see her inner beauty and potential in order to encourage her to believe in herself. She is the perfect role model for young girls, as she treated every person with kindness and respect even though she didn't always get the same in return.</p>
 		<img src="img/cinderella-transformation.jpeg">
-		<p>Cinderella's Fairy Godmother Transforming her for the Ball</p>
+		<p class="caption">Cinderella's Fairy Godmother Transforming her for the Ball!</p>
 		<!-- characteristics -->
 		<h2>Cinderella's Characteristics</h2>
 		<OL>
